# project-core

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  compose.yml
config/: config.prod.toml  config.toml
migration/: Cargo.toml
migration/src/: lib.rs  m20240616_095216_create_users_and_roles.rs  m20240616_152458_set_default_date.rs
src/: macros.rs  main.rs
src/application/: mod.rs
src/config/: auth.rs  database.rs  mod.rs  settings.rs
src/domain/: mod.rs
src/domain/entities/: role.rs  user.rs
src/domain/services/: mod.rs  role_service.rs  user_service.rs
src/domain/value_objects/: mod.rs
src/enums/: mod.rs  user_role_enum.rs
src/infrastructure/: mod.rs
src/infrastructure/database/: mod.rs
src/infrastructure/repositories/: role_repository.rs  user_repository.rs
src/presentation/: mod.rs
src/presentation/controllers/: auth_controller.rs  mod.rs  role_controller.rs  user_controller.rs
src/presentation/dto/: mod.rs  response_dto.rs  user_dto.rs
src/presentation/middleware/: auth_middleware.rs
src/presentation/routes/: auth_routes.rs  mod.rs  role_routes.rs  user_routes.rs
