[package]
name = "project-core"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.7.0"
sea-orm = { version = "0.12", features = ["runtime-actix", "macros", "sqlx-postgres"] }
tokio = { version = "1", features = ["full"] }
jsonwebtoken = "9.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
lettre = { version = "0.11.7", features = ["smtp-transport", "builder"] }
oauth2 = "4.4"
log = "0.4"
mongodb = { version = "2.8.2" }
env_logger = "0.11"
config = "0.14"
#entities = { path = "entities" }
migration = { path = "migration" }

[dev-dependencies]
actix-rt = "2.10"

[workspace]
members = [
    "migration",
#    "entities",
]